# confidence

./: .gitignore  FUTURE_IDEAS.md  README.md  pyproject.toml
.beads/: issues.jsonl
confidence/: __init__.py  cli.py  core.py  types.py
examples/: confidence_dropin.py
tests/: test_api_live.py  test_cli_env_yaml.py  test_cli_mock.py  test_cli_prompt.py  test_core.py
