[project]
name = "confidence"
version = "0.1.0"
description = "Confidence-aware scoring utilities for token log probabilities."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Peter Organisciak", email = "peter.organisciak@du.edu"}
]
keywords = [
  "logprobs",
  "confidence",
  "llm",
  "scoring",
  "evaluation"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=0.7.0"]
hf = ["transformers>=4.40.0", "torch"]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=8.0.0", "pyyaml>=6.0"]

[project.scripts]
confidence-dropin = "confidence.cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["confidence"]

[tool.pytest.ini_options]
markers = ["api: live API tests"]
